--- a/src/app/pages/lancamentos/lancamentos.component.html
+++ b/src/app/pages/lancamentos/lancamentos.component.html
@@ -19,14 +19,14 @@
                         </div>
 
                         <div class="col-4 form-group">
-                            <label for="vencimento" class="label">Vencimento</label>
+                            <label for="vencimento" class="label">Intervalo do vencimento</label>
                             <input nbInput name="vencimento" class="input" placeholder="Selecione um intervalo de tempo" [nbDatepicker]="vencimentoPicker">
                             <nb-rangepicker #vencimentoPicker></nb-rangepicker>                   
                         </div>
 
                         <div class="col" style="margin-top: auto">
                             <div class="button-container">
-                                <button nbButton type="primary">Pesquisar</button>
+                                <button nbButton status="primary">Pesquisar</button>
                             </div>
                         </div>
                     </div>
@@ -38,21 +38,21 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="col">Pessoa</th>
-                                <th class="col">Descrição</th>
-                                <th class="col">Vencimento</th>
-                                <th class="col">Pagamento</th>
-                                <th class="col">Valor</th>
-                                <th class="col">Ações</th>
+                                <th class="col-2">Pessoa</th>
+                                <th class="col-2">Descrição</th>
+                                <th class="col col-data">Vencimento</th>
+                                <th class="col col-data">Pagamento</th>
+                                <th class="col-2">Valor</th>
+                                <th class="col col-acoes"><div class="acoes">Ações</div></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let element of elements">
-                                <td class="col">{{element.pessoa}}</td>
-                                <td class="col">{{element.descricao}}</td>
-                                <td class="col">{{element.vencimento | date: 'dd/MM/yyyy HH:mm'}}</td>
-                                <td class="col">{{element.pagamento | date: 'dd/MM/yyyy HH:mm'}}</td>
-                                <td class="col">{{element.valor}}</td>
+                                <td class="col-2">{{element.pessoa}}</td>
+                                <td class="col-2">{{element.descricao}}</td>
+                                <td class="col col-data">{{element.vencimento | date: 'dd/MM/yyyy HH:mm'}}</td>
+                                <td class="col col-data">{{element.pagamento | date: 'dd/MM/yyyy HH:mm'}}</td>
+                                <td class="col-2">{{element.valor}}</td>
                                 <td class="col">
                                     <div class="acoes">
                                         <button nbButton size="small" status="primary" nbTooltip="Editar"><nb-icon icon="edit-outline"></nb-icon></button>
